* Warn when changing credential

Version 7.2.0 - 2024-04-29
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.0.0 - 2023-10-30
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.12

Version 6.8.0 - 2023-05-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.7
* Add support for Python 3.11

Version 6.6.0 - 2022-10-31
--------------------------
* Bug fixes (see mercurial logs for details)
* Use contact mechanism from address

Version 6.4.0 - 2022-05-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.10
* Remove support for Python 3.6

Version 6.2.0 - 2021-11-01
--------------------------
* Initial release