@@ -1,3 +1,4 @@
+* Add warehouse as shipping method criteria
 * Warn when changing credential
 
 Version 7.2.0 - 2024-04-29
